# brew-buddy

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions_example.csv
components/ActiveRecipe/: ActiveRecipe.c  CMakeLists.txt
components/ActiveRecipe/include/: ActiveRecipe.h
components/Auto_Run/: Auto_Run.c  CMakeLists.txt
components/Auto_Run_Setup/: Auto_Run_Setup.c  CMakeLists.txt
components/BrewStates/: BrewStates.c  CMakeLists.txt
components/Default/: CMakeLists.txt  Default.c
components/EquipConfig/: CMakeLists.txt  EquipConfig.c
components/HeaterPID/: CMakeLists.txt  HeaterPID.c
components/HeaterPWM/: CMakeLists.txt  HeaterPWM.c
components/HeaterRelay/: CMakeLists.txt  HeaterRelay.c
components/Instant_Heat/: CMakeLists.txt  Instant_Heat.c
components/PumpRelay/: CMakeLists.txt  PumpRelay.c
components/ds18b20/: ds18b20.c
components/interrupts/: CMakeLists.txt  interrupts.c
components/led/: led.c
components/nvsblob/: CMakeLists.txt  nvsblob.c
components/restful_server/: CMakeLists.txt  CMakeLists.txt.cdn  esp_rest_main.c  rest_server.c
components/restful_server/include/: esp_rest_main.h
components/restful_server/web-demo/src/: router.js  store.js
components/restful_server/web-demo/src/views/: Manual.vue
components/servo/: CMakeLists.txt  servo.c
components/wps_button/: button.c
front/: .eslintrc.js  package.json
front/dist_cdn/: index.html
front/public/: index.html
front/src/: App.vue  main.js  router.js  store.js
front/web-demo/: vue.config.js
main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+33 files in other folders)
